Basic form started.

--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -1,1 +1,7 @@
+<form action="" method="POST">
+    {%csrf_token%}
 {{form}}
+{{formset_person}}
+{{formset_family}}
+<input type='submit' value='Create collection record'/>
+</form>
