--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -1,6 +1,38 @@
 {% extends 'collection_record/base.html' %}
 {%block pagetitle%}Add a Collection Record{%endblock pagetitle%}
-{%block extrahead %}<style type="text/css"> h4 { font-weight:bold;}</style>{%endblock extrahead %}
+{%block extrahead %}
+<style type="text/css"> h4 { font-weight:bold;}</style>
+<style type="text/css">
+    .add-row {
+        padding-left:18px;
+        padding-top:10px;
+        display:block;
+        background:url(/site_media/images/formsets/add.png) no-repeat left center;
+    }
+    .delete-row {
+        /*float:right;
+        display:block;*/
+        vertical-align:middle;
+        margin-left:4px;
+        padding-left:18px;
+        background:url(/site_media/images/formsets/delete.png) no-repeat left center;
+    }
+</style>
+<style type="text/css">
+ textarea {
+    width: 560px;
+    height: 40px;
+    vertical-align: bottom;
+    }
+</style>
+
+<script type="text/javascript" src="/site_media/js/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="/site_media/js/jquery.formset.js"></script>
+<script type="text/javascript" src="/media/js/core.js"></script>
+<script type="text/javascript" src="/media/js/calendar.js"></script>
+<script type="text/javascript" src="/media/js/admin/DateTimeShortcuts.js"></script>
+
+{%endblock extrahead %}
 
 {%block bodycontent%}
 <div class="container" id="bodycontainer">
@@ -11,66 +43,140 @@
 <form action="" method="POST">
     {%csrf_token%}
     <fieldset>
+        <input style="float:right" name="submit" type="submit" value="Preview record"/>
         <h3>Basic Metadata</h3>
         {%for field in form_main%}
-        <div class="span-5"><label for="{{form.id}}">{{field.label}}</label></div><div class="span-18 last">{{field}}</div>
+        <p class="span-23">
+        <span class="span-5"><label for="{{form.id}}">
+            {%for err in field.errors %}
+                <span class="errorlist">{{err}}</span>
+            {% endfor %}
+        {{field.label}}</label>
+        </span>
+        <span class="span-18 last">{{field}}</span>
+</p>
         {% endfor %}
     </fieldset>
     <fieldset>
         <h3>Creators</h3>
-        <fieldset>
+        <fieldset id="id_fieldset_persname">
             <h4>Personal names</h4>
             {{ formset_person.management_form }}
             {% for form in formset_person %}
-            {{form.term}}{{form.qualifier}}
-            <div class="span-5"><label for="xx">{{form.content.label}}</label></div><div class="span-17 last">{{form.content}}</div>
+            <div>
+            {% if form.errors %}
+                <span class="errorlist">{{form.errors}}</span>
+            {% endif %}
+            <label class="span-5">{{form.content.label}}</label>
+                {{form.content}}
+                {{form.term}}{{form.qualifier}}
+            </div>
             {% endfor %}
         </fieldset>
-        <fieldset>
+        <fieldset id="id_fieldset_familyname">
             <h4>Family names</h4>
             {{ formset_family.management_form }}
             {% for form in formset_family %}
-            {{form.term}}{{form.qualifier}}
-            <div class="span-5"><label for="xx">{{form.content.label}}</label></div><div class="span-17 last">{{form.content}}</div>
+            <div>
+            {% if form.errors %}
+                <span class="errorlist">{{form.errors}}</span>
+            {% endif %}
+            <label class="span-5">{{form.content.label}}</label>
+                {{form.content}}
+                {{form.term}}{{form.qualifier}}
+            </div>
             {% endfor %}
         </fieldset>
-        <fieldset>
+        <fieldset id="id_fieldset_orgname">
             <h4>Organization names</h4>
             {{ formset_organization.management_form }}
             {% for form in formset_organization %}
-            {{form.term}}{{form.qualifier}}
-            <div class="span-5"><label for="xx">{{form.content.label}}</label></div><div class="span-17 last">{{form.content}}</div>
+            <div>
+            {% if form.errors %}
+                <span class="errorlist">{{form.errors}}</span>
+            {% endif %}
+            <label class="span-5">{{form.content.label}}</label>
+                {{form.content}}
+                {{form.term}}{{form.qualifier}}
+            </div>
             {% endfor %}
         </fieldset>
     </fieldset>
     <fieldset>
         <h3>Subjects</h3>
-        <fieldset>
+        <fieldset id="id_fieldset_topic">
             <h4>Topics</h4>
             {{ formset_topic.management_form }}
             {% for form in formset_topic %}
-            {{form.term}}{{form.qualifier}}
-            <div class="span-5"><label for="xx">{{form.content.label}}</label></div><div class="span-17 last">{{form.content}}</div>
+            <div>
+            {% if form.errors %}
+                <span class="errorlist">{{form.errors}}</span>
+            {% endif %}
+            <label class="span-5">{{form.content.label}}</label>
+                {{form.content}}
+                {{form.term}}{{form.qualifier}}
+            </div>
             {% endfor %}
         </fieldset>
-        <fieldset>
+        <fieldset id="id_fieldset_subjectname">
             <h4>Subjects: Personal, Family or Organization names</h4>
             {{ formset_subjectname.management_form }}
             {% for form in formset_subjectname %}
-            {{form.term}}{{form.qualifier}}
-            <div class="span-5"><label for="xx">{{form.content.label}}</label></div><div class="span-17 last">{{form.content}}</div>
+            <div>
+            {% if form.errors %}
+                <span class="errorlist">{{form.errors}}</span>
+            {% endif %}
+            <label class="span-5">{{form.content.label}}</label>
+                {{form.content}}
+                {{form.term}}{{form.qualifier}}
+            </div>
             {% endfor %}
         </fieldset>
-        <fieldset>
+        <fieldset id="id_fieldset_geog">
             <h4>Geographical location</h4>
             {{ formset_geog.management_form }}
             {% for form in formset_geog %}
-            {{form.term}}{{form.qualifier}}
-            <div class="span-5"><label for="xx">{{form.content.label}}</label></div><div class="span-17 last">{{form.content}}</div>
-            {% endfor %}
+            <div>
+            {% if form.errors %}
+                <span class="errorlist">{{form.errors}}</span>
+            {% endif %}
+            <label class="span-5">{{form.content.label}}</label>
+                {{form.content}}
+                {{form.term}}{{form.qualifier}}
+            </div>
+           {% endfor %}
         </fieldset>
         <input name="submit" type="submit" value="Preview record"/>
         </form>
     </div>
 </div>
+<script type="text/javascript">
+    $(function() {
+        $('#id_fieldset_persname div').formset({
+            formCssClass: 'dynamic-fieldset-form',
+            prefix: "person_form"
+        });
+        $('#id_fieldset_familyname div').formset({
+            formCssClass: 'dynamic-fieldset-form',
+            prefix: "family_form"
+        });
+        $('#id_fieldset_orgname div').formset({
+            formCssClass: 'dynamic-fieldset-form',
+            prefix: "org_form"
+        });
+        $('#id_fieldset_topic div').formset({
+            formCssClass: 'dynamic-fieldset-form',
+            prefix: "topic_form"
+        });
+        $('#id_fieldset_subjectname div').formset({
+            formCssClass: 'dynamic-fieldset-form',
+            prefix: "subjectname_form"
+        });
+        $('#id_fieldset_geog div').formset({
+            formCssClass: 'dynamic-fieldset-form',
+            prefix: "geog_form"
+        });
+    });
+</script>
+
 {%endblock bodycontent%}
