--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -64,7 +64,7 @@
     <fieldset>
         <h3>Creators</h3>
         <fieldset id="id_fieldset_persname">
-            <h4>Personal names</h4>
+            <h4>Personal Names</h4>
             {{ formset_person.management_form }}
             {% for form in formset_person %}
             <div>
@@ -78,7 +78,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_familyname">
-            <h4>Family names</h4>
+            <h4>Family Names</h4>
             {{ formset_family.management_form }}
             {% for form in formset_family %}
             <div>
@@ -92,7 +92,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_orgname">
-            <h4>Organization names</h4>
+            <h4>Organization Names</h4>
             {{ formset_organization.management_form }}
             {% for form in formset_organization %}
             <div>
@@ -123,7 +123,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_subject_person_name">
-            <h4>Subject: Personal Name</h4>
+            <h4>Personal Names</h4>
             {{ formset_subject_person_name.management_form }}
             {% for form in formset_subject_person_name %}
             <div>
@@ -137,7 +137,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_subject_family_name">
-            <h4>Subject: Family Name</h4>
+            <h4>Family Names</h4>
             {{ formset_subject_family_name.management_form }}
             {% for form in formset_subject_family_name %}
             <div>
@@ -151,7 +151,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_subject_organization_name">
-            <h4>Subject: Organization Name</h4>
+            <h4>Organization Names</h4>
             {{ formset_subject_organization_name.management_form }}
             {% for form in formset_subject_organization_name %}
             <div>
@@ -165,7 +165,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_geog">
-            <h4>Geographical location</h4>
+            <h4>Geographical Location</h4>
             {{ formset_geog.management_form }}
             {% for form in formset_geog %}
             <div>
@@ -179,7 +179,7 @@
            {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_genre">
-            <h4>Form/genres of material</h4>
+            <h4>Form/Genres of material</h4>
             {{ formset_genre.management_form }}
             {% for form in formset_genre %}
             <div>
