edits for consistency.

--- a/templates/collection_record/collection_record/add.html
+++ b/templates/collection_record/collection_record/add.html
@@ -165,7 +165,7 @@
             {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_geog">
-            <h4>Geographical Location</h4>
+            <h4>Geographical Locations</h4>
             {{ formset_geog.management_form }}
             {% for form in formset_geog %}
             <div>
@@ -179,7 +179,7 @@
            {% endfor %}
         </fieldset>
         <fieldset id="id_fieldset_genre">
-            <h4>Form/Genres of material</h4>
+            <h4>Form/Genres of Materials</h4>
             {{ formset_genre.management_form }}
             {% for form in formset_genre %}
             <div>
